refactor:change db

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,11 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=hostname
+DATABASE_PORT=port
+DATABASE_NAME=database-name
+DATABASE_USERNAME=user
+DATABASE_PASSWORD=password
+DATABASE_URL=postgres://{user}:{password}@{hostname}:{port}/{database-name}
