--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-graphql": "^4.19.0",
     "@strapi/plugin-i18n": "4.17.1",
     "@strapi/plugin-users-permissions": "4.17.1",
+    "@strapi/provider-upload-cloudinary": "^4.21.0",
     "@strapi/strapi": "4.17.1",
     "pg": "^8.11.3",
     "react": "^18.0.0",
