refactor(Article_Model):description maxLength -> 160

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ DATABASE_NAME=database-name
 DATABASE_USERNAME=user
 DATABASE_PASSWORD=password
 DATABASE_URL=postgres://{user}:{password}@{hostname}:{port}/{database-name}
+# cloudinary
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=api_key
+CLOUDINARY_API_SECRET=api_secret
+# Middlewares
+CORS_ORIGIN=http://example.com,http://localhost:3000
